# operating-system

./: .gitignore
HW_10/: Makefile  client1.c  client2.c  server.c
HW_12/: client.c  server.c
HW_6/: hw  hw_6.c  logs-1  logs-2
HW_7/: main  main.c
HW_8/: main  main.c
HW_9/: reader.c  writer.c
IHW_1/: README.md
IHW_1/10/: CMakeLists.txt  README.md  launch.sh  process1  process1.c  process2  process2.c
IHW_1/10/tests/: input1.txt  input4.txt  output1.txt  output2.txt  output3.txt  output4.txt
IHW_1/4/: README.md  main  main.c
IHW_1/5/: README.md  main  main.c
IHW_1/6/: README.md  main  main.c
IHW_1/7/: README.md  main  main.c
IHW_1/8/: README.md  process1  process1.c  process2  process2.c
IHW_1/9/: README.md  create  create_fifo.c  launch.sh  process1  process1.c  process2  process2.c
IHW_2/: README.md
IHW_2/4-5/: main  main.c
IHW_2/6-7/: main  main.c
IHW_2/8/: common.h  finish  finish_programm.c  init  init.c  librarian  librarian.c  reader  reader.c  run.sh
IHW_3/: README.md
IHW_3/4-5/: HandleTCPClient.c  client.c  server.c
IHW_3/6-7/: HandleTCPClient.c  HandleTCPMonitor.c  Makefile  client.c  monitor.c  server.c
IHW_3/8/: HandleTCPClient.c  HandleTCPMonitor.c  HandleTCPMonitor.h  monitor.c  server.c
IHW_4/: README.md
IHW_4/4-5/: Makefile  README.md  client  client.c  server  server.c
IHW_4/6-7/: README.md  client  client.c  monitor  monitor.c  secret_message.txt  server  server.c
IHW_4/8/: README.md  client  client.c  monitor  monitor.c  server  server.c
IHW_4/9-10/: Makefile  client  client.c  monitor  monitor.c  (+3 more)
(+12 files in other folders)
